formatted the layout

--- a/about (copy).html
+++ b/about (copy).html
@@ -16,9 +16,9 @@ Purchase:
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description"  content=""/>
-	<meta name="keywords" content=""/>
-	<meta name="author"  content=""/>
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="" />
 	<meta name="MobileOptimized" content="320" />
 	<title>Euro-Afro Just Energy</title>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -32,15 +32,18 @@ Purchase:
 	<!--=== Favicon Link ===-->
 	<link rel="shortcut icon" type="image/png" href="assets/images/svg/euroafrologo.svg">
 </head>
+
 <body>
-<section class="s_header_main"> <!--===== Section One Start =====-->
-	<div class="s_header">
-		<div class="container-fluid">
-			<div class="ss_header"> <!--===== Top Menu =====-->
-			<div class="row">
-				<div class="col-lg-3 col-md-7 col-sm-12 col-12 align-self-center">
-					<div class="ss_logo">
-						<a href="index.html"><img class="img-fluid" src="assets/images/svg/euroafrologo.svg" alt="logo" /></a>
+	<section class="s_header_main">
+		<!--===== Section One Start =====-->
+		<div class="s_header">
+			<div class="container-fluid">
+				<div class="ss_header">
+					<!--===== Top Menu =====-->
+					<div class="row">
+						<div class="col-lg-3 col-md-7 col-sm-12 col-12 align-self-center">
+							<div class="ss_logo">
+								<a href="index.html"><img class="img-fluid" src="assets/images/svg/euroafrologo.svg" alt="logo" /></a>
 					</div>
 				</div>
 				<div class="col-lg-9 col-md-5 col-sm-12 col-12 align-self-center">
