--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 Euro-Afro Just Energy
 Version: 1.0.0
 Author: Digital Rainbow Team	
-Website:www.digitalrainbow.co.za
+Website: www.digitalrainbow.co.za
 -->
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
@@ -371,7 +371,7 @@ Purification Plants, Manufacturing Plants, Agricultural Centres, Mining Sector, 
 	<p>&copy Copyright 2022, All right reserved by <a href="index.html">Digital Rainbow Team</a></p>
 </div>
 <center><div>
-	<p><i class="fas fa-server"></i> Hosted by <a target="_blank" href="https://designthat.cloud?utm_source=justenergy&utm_medium=footer&utm_campaign=hosted%20project%20site">DesignThat</a></p>
+	<p><i class="fas fa-server"></i> Hosted by <a target="_blank" href="https://designthat.cloud?utm_source=justenergy&utm_medium=footer&utm_campaign=hosted%20project%20site">DesignThat Cloud</a></p>
 </div></center>
 <div class="clearfix"></div>
 <!--===== script start =====-->
